Fix the gap grid to match the gutter

--- a/superkube/vars/scales.scss
+++ b/superkube/vars/scales.scss
@@ -76,7 +76,7 @@ $scales: map-extend($scales, (
         columnname: column,
         columns: 12,
         gutter: 8rem,
-        gap: 6rem
+        gap: 8rem
     ),
     container: (
         small: 400px,
